Update M3 Dataframe Basic Understanding.ipynb

--- a/M3 Dataframe Basic Understanding.ipynb
+++ b/M3 Dataframe Basic Understanding.ipynb
@@ -27,7 +27,7 @@
         "\r\n",
         "storage_account_name    = \"dcadlsgen2\"\r\n",
         "container_name          = \"data\"\r\n",
-        "sas_token               = \"sp=rwl&st=2024-10-30T20:59:32Z&se=2024-11-06T05:59:32Z&skoid=76091599-8241-44cb-aa8e-18d7e8b9cf37&sktid=304616a7-7248-4620-8cee-5562f30ee9ff&skt=2024-10-30T20:59:32Z&ske=2024-11-06T05:59:32Z&sks=b&skv=2022-11-02&spr=https&sv=2022-11-02&sr=c&sig=LfEQAtCwCbYsxM8L%2F%2BrVJaMQRI4%2FLnAWEO%2FRn%2FhbjQE%3D\"\r\n",
+        "sas_token               = \"YOUR_OWN_SHARED_ACCESS_SIGNATURE_FROM_YOUR_DATA_LAK\"\r\n",
         "\r\n",
         "# Set Spark configuration to use the SAS token\r\n",
         "\r\n",
